Style Changes - Added bootstrap tooltip styles - Added Server Manager related styles for Detail pages - Fixed showing up of horizontal scroll bar inside grid by adding scroll overflow property inside body

--- a/webroot/css/contrail.custom.css
+++ b/webroot/css/contrail.custom.css
@@ -347,15 +347,6 @@
 .display-inline {
   display: inline-block;
 }
-.tooltip {
-  display: none;
-  position: absolute;
-  background-color: #DAECF4;
-  border-radius: 5px;
-  padding: 5px;
-  color: #003F59;
- 
-}
 pre.prettyprint {
   border: 0px;
   white-space: pre-wrap;
@@ -1783,6 +1774,21 @@ color: #b94a48;
 	margin-bottom: 0;
 }
 
+/* Bootstrap Tooltips*/
+.tooltip, .tooltip.bottom {
+  margin: 0;
+  padding: 0;
+}
+.tooltip .tooltip-arrow {
+  border: none;
+}
+.tooltip .tooltip-inner {
+  background-color: #FFFFE1;
+  color: #333;
+  text-shadow: none;
+  padding: 5px;
+  border: 1px solid #ccc;
+}
 /*policy rule styles */
 
 #windowCreatePolicy .rule-item .select2-chosen {
@@ -2073,6 +2079,23 @@ color: #b94a48;
 }
 .wizard .stepInfo p .selectedServerCount{
     color: #3182bd;
+}
+
+/* Server Manager Page Styles */
+
+.detail-header-row {
+  border-bottom: 1px solid #eee;
+}
+.horizontal-actions {
+  margin: 5px 0 0;
+}
+.horizontal-actions .horizontal-action-item {
+  color: #777;
+  padding: 5px 8px;
+  border-left: 1px solid #eee;
+}
+.horizontal-actions .horizontal-action-item:hover {
+  color: #3182bd;
 }
 
 /* Checked Multiselect styles */
